--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,22 @@
 .App-link {
   color: #61dafb;
 }
-
+.Sooby{
+  text-align: center;
+  font-size: 20px;
+  color: #61dafb;
+  font-weight: bold;
+  margin-top: 20px;
+  background-color: antiquewhite;
+}
+.nev{
+  text-align: center;
+  font-size: 20px;
+  color: #61dafb;
+  font-weight: bold;
+  margin-top: 20px;
+  background-color:blue
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
